--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -4,15 +4,16 @@
 name: Java CI
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+        - Arsh
 
 jobs:
   build:
+    name: build
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
